--- a/Project/app/src/main/res/values/strings.xml
+++ b/Project/app/src/main/res/values/strings.xml
@@ -22,11 +22,18 @@
     <string name="geolocation_verification_text"><u>Location Verification Required</u></string>
     <string name="event_name_text">EDM Festival</string>
     <string name="event_countdown_text">Starts in: %1$sd: %2$sh: %3$ss</string>
-    <string name="event_price_text">$%1$</string>
+    <string name="event_price_text">Free</string>
     <string name="create_event_name_text">EDM Festival</string>
     <string name="create_event_details_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</string>
     <string name="create_event_rules_text">Only 18+ allowed</string>
     <string name="create_event_deadline_text"> </string>
     <string name="create_event_entrants_num_text"> </string>
     <string name="create_event_attendees_num_text"> </string>
+    <string name="edit_event_attendees_num_text"> </string>
+    <string name="edit_event_entrants_num_text"> </string>
+    <string name="send_notification_text" />
+    <string name="organiser_profile_list_object_name">John Doe</string>
+    <string name="admin_profile_list_object_name">Admin · John Doe</string>
+    <string name="notification_text">EDM Fest: You\'re in!</string>
+    <string name="notification_time_text">20 min ago</string>
 </resources>
