- Connected nav bar to Home Screen - Connected all nav bar elements to their layouts - Connected floating action button to appropriate layout - Implemented pagination and included some dummy events in Home Screen - Implemented custom back button functionality - Implemented all custom pop-ups for profile and event creation screens

--- a/Project_v2/app/src/main/res/values/strings.xml
+++ b/Project_v2/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="profile_name_text">John Doe</string>
     <string name="profile_email_text">johndoe@gmail.com</string>
     <string name="profile_phone_text">+1 (123) 456-7890</string>
-    <string name="event_description_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</string>
+    <string name="event_description_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</string>
     <string name="event_rules_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</string>
     <string name="event_deadline_text">Sep 19, 2024</string>
     <string name="geolocation_verification_text"><u>Location Verification Required</u></string>
