--- a/Project_v2/app/src/main/res/values/strings.xml
+++ b/Project_v2/app/src/main/res/values/strings.xml
@@ -15,10 +15,10 @@
 
     <string name="profile_name_text">John Doe</string>
     <string name="profile_email_text">johndoe@gmail.com</string>
-    <string name="profile_phone_text">+1 (123) 456-7890</string>
+    <string name="profile_phone_text">+1 (123) 456–7890</string>
     <string name="event_description_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</string>
     <string name="event_rules_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</string>
-    <string name="event_deadline_text">09-18-2024</string>
+    <string name="event_deadline_text">09–18–2024</string>
     <string name="geolocation_verification_text"><u>Location Verification Required</u></string>
     <string name="event_name_text">EDM Festival</string>
     <string name="event_countdown_text">Starts in: %1$sd: %2$sh: %3$ss</string>
@@ -34,7 +34,7 @@
     <string name="send_notification_text" />
     <string name="organiser_profile_list_object_name">John Doe</string>
     <string name="admin_profile_list_object_name">Admin · John Doe</string>
-    <string name="notification_text">EDM Fest: You\'re in!</string>
+    <string name="notification_text">EDM Fest: Youre in!</string>
     <string name="notification_time_text">20 min ago</string>
     <string name="next">og_next</string>
     <string name="previous">og previous</string>
