Added Hints when creating an event and {Addressing Feedback (Incomplete)}Adding tests for Facility

--- a/Project_v2/app/src/main/res/values/strings.xml
+++ b/Project_v2/app/src/main/res/values/strings.xml
@@ -15,21 +15,17 @@
     <string name="profile_name_text">John Doe</string>
     <string name="profile_email_text">johndoe@gmail.com</string>
     <string name="profile_phone_text">+1 (123) 456-7890</string>
-    <string name="event_description_text">Enter Event Description</string>
+    <string name="event_details_text">Enter Event Details</string>
     <string name="event_rules_text">Enter Event Rules</string>
     <string name="event_deadline_text">DD-MM-YYYY</string>
+    <string name="create_event_price_text">Enter Event Price</string>
     <string name="geolocation_verification_text"><u>Location Verification Required</u></string>
     <string name="event_name_text">Enter Event Name</string>
     <string name="event_countdown_text">Starts in: %1$sd: %2$sh: %3$ss</string>
     <string name="event_price_text">Free</string>
-    <string name="create_event_name_text">Enter Event Name</string>
-    <string name="create_event_details_text">Enter Event Details</string>
-    <string name="create_event_rules_text">Enter Event Rules</string>
     <string name="create_event_deadline_text"> </string>
-    <string name="create_event_entrants_num_text"> </string>
-    <string name="create_event_attendees_num_text"> </string>
-    <string name="edit_event_attendees_num_text"> </string>
-    <string name="edit_event_entrants_num_text"> </string>
+    <string name="create_event_entrants_num_text">OPTIONAL</string>
+    <string name="create_event_attendees_num_text">Enter Number of Attendees</string>
     <string name="send_notification_text" />
     <string name="organiser_profile_list_object_name">John Doe</string>
     <string name="admin_profile_list_object_name">Admin · John Doe</string>
